--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,8 @@
     "name": "emtech",
     "compatibility_date": "2024-04-01",
     "assets": {
-        "directory": "./dist"
+        "directory": "./dist",
+        "binding": "ASSETS",
+        "not_found_handling": "single-page-application"
     }
 }
