--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,8 +1,8 @@
 {
     "name": "emtech",
-    "compatibility_date": "2024-04-01",
+    "compatibility_date": "2024-04-25",
     "assets": {
         "directory": "./dist",
-        "not_found_handling": "single-page-application"
+        "html_handling": "force-trailing-slash",
     }
 }
