--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,6 +3,7 @@
     "compatibility_date": "2024-04-25",
     "assets": {
         "directory": "./dist",
-        "html_handling": "force-trailing-slash"
+        "html_handling": "force-trailing-slash",
+        "not_found_handling": "404-page"
     }
 }
