--- a/.github/workflows/autocorrect.yml
+++ b/.github/workflows/autocorrect.yml
@@ -46,7 +46,7 @@ jobs:
                   if git diff --staged --quiet; then
                     echo "No changes to commit"
                   else
-                  git commit -m "你們為甚麼就不能加個空白呢？"
+                  git commit -m "style: 你們為甚麼就不能加個空白呢？"
                   git push
                   fi
               env:
