--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     },
     "devDependencies": {
         "autocorrect-node": "^2.13.0",
-        "prettier": "^3.5.3"
+        "prettier": "^3.5.3",
+        "cross-env": "^7.0.3"
     },
     "packageManager": "pnpm@10.7.1",
     "pnpm": {
