fix: machine config

--- a/.github/workflows/markdown-validation.yml
+++ b/.github/workflows/markdown-validation.yml
@@ -52,5 +52,8 @@ jobs:
           .github/workflows/markdown-validation.sh
 
   winston-bot:
-    name: Winston Bot 中文檢查
-    uses: Edit-Mr/WinstonBot-CI@latest
+    name: 📰 Winston Bot 中文檢查
+    runs-on: ubuntu-latest
+    steps:
+      name: Winston Bot 中文檢查
+      uses: Edit-Mr/WinstonBot-CI@latest
