fix: use github_token

--- a/.github/workflows/markdown-validation.yml
+++ b/.github/workflows/markdown-validation.yml
@@ -51,9 +51,11 @@ jobs:
           chmod +x .github/workflows/markdown-validation.sh
           .github/workflows/markdown-validation.sh
 
-  winston-bot:
     name: 📰 Winston Bot 中文檢查
     runs-on: ubuntu-latest
     steps:
-    - name: Winston Bot 中文檢查
-      uses: Edit-Mr/WinstonBot-CI@main
+      - name: Winston Bot 中文檢查
+        uses: Edit-Mr/WinstonBot-CI@main
+        with:
+          exts: md
+          github_token: ${{ secrets.GITHUB_TOKEN }}
