fix: add missing winston-bot tag

--- a/.github/workflows/markdown-validation.yml
+++ b/.github/workflows/markdown-validation.yml
@@ -51,6 +51,7 @@ jobs:
           chmod +x .github/workflows/markdown-validation.sh
           .github/workflows/markdown-validation.sh
 
+  winston-bot:
     name: 📰 Winston Bot 中文檢查
     runs-on: ubuntu-latest
     steps:
