fix: reset files

--- a/.github/workflows/markdown-validation.yml
+++ b/.github/workflows/markdown-validation.yml
@@ -26,21 +26,18 @@ jobs:
         run: npx prettier --write .
         continue-on-error: true
 
-      - name: Add changes except package.json
+      - name: Add and commit changes
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git add .
-          git reset package.json
-          git reset .github
-      - name: Commit
-        run: |
+          git restore --staged package.json .github
+          git restore package.json .github
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
-          git commit -m "style: 你們為甚麼就不能加個空白呢？"
-          git pull --rebase
-          git push
+            git commit -m "style: 你們為甚麼就不能加個空白呢？"
+            git push
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
