fix: overflow nav

--- a/config.json
+++ b/config.json
@@ -35,6 +35,9 @@
 		},
 		"程式教學": {
 			"description": "基礎語法教學"
+		},
+		"hmmm": {
+			"description": "毛哥EM 的電子報，<a href=https://elvismao.com/hmmm/ target=_blank>點我前往訂閱</a>。"
 		}
 	}
 }
