--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
 	"name": "emtech",
-	"version": "1.0.0",
 	"scripts": {
 		"build": "node emblog/generate.js",
 		"start": "node emblog/server.js",
 		"dev": "CACHE=true SKIPPOST=true node emblog/server.js",
-		"new": "node emblog/new.js"
+		"new": "node emblog/new.js",
+		"format": "prettier --write ."
 	},
 	"dependencies": {
 		"highlight.js": "^11.11.1",
 		"markdown-it": "^14.1.0",
-		"sharp": "^0.33.5"
+		"sharp": "^0.34.5"
 	},
 	"devDependencies": {
 		"autocorrect-node": "^2.14.0",
-		"prettier": "^3.6.2"
+		"prettier": "^3.7.3",
+		"prettier-plugin-organize-imports": "^4.3.0",
+		"prettier-plugin-packagejson": "^2.5.20"
 	},
 	"packageManager": "pnpm@10.18.1+sha512.77a884a165cbba2d8d1c19e3b4880eee6d2fcabd0d879121e282196b80042351d5eb3ca0935fa599da1dc51265cc68816ad2bddd2a2de5ea9fdf92adbec7cd34",
 	"pnpm": {
