--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "emtech",
 	"scripts": {
 		"build": "node emblog/generate.js",
-		"start": "node emblog/server.js",
 		"dev": "CACHE=true SKIPPOST=true node emblog/server.js",
+		"format": "prettier --write .",
 		"new": "node emblog/new.js",
-		"format": "prettier --write ."
+		"start": "node emblog/server.js"
 	},
 	"dependencies": {
 		"highlight.js": "^11.11.1",
@@ -14,11 +14,11 @@
 	},
 	"devDependencies": {
 		"autocorrect-node": "^2.14.0",
-		"prettier": "^3.7.3",
+		"prettier": "^3.7.4",
 		"prettier-plugin-organize-imports": "^4.3.0",
 		"prettier-plugin-packagejson": "^2.5.20"
 	},
-	"packageManager": "pnpm@10.18.1+sha512.77a884a165cbba2d8d1c19e3b4880eee6d2fcabd0d879121e282196b80042351d5eb3ca0935fa599da1dc51265cc68816ad2bddd2a2de5ea9fdf92adbec7cd34",
+	"packageManager": "pnpm@10.24.0+sha512.01ff8ae71b4419903b65c60fb2dc9d34cf8bb6e06d03bde112ef38f7a34d6904c424ba66bea5cdcf12890230bf39f9580473140ed9c946fef328b6e5238a345a",
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"sharp"
